--- a/data/equipment/consumable-09-vL6AtFbcxbipGvtf.htm
+++ b/data/equipment/consumable-09-vL6AtFbcxbipGvtf.htm
@@ -1,13 +1,12 @@
 Name: Basilisk Eye
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Oeil de Basilic
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
 <p><strong>Trigger</strong> You @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Shield Block} a melee attack with the affixed shield.</p>
 <p>This slimy green stone glows with a strong light whenever the shield it adorns blocks a melee attack. When the eye is activated, the attacker must succeed at a DC 25 Fortitude save or become @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Slowed} 1 for 1 minute as its body slowly stiffens in partial petrification.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">F</span> Envision</p>
-<p><strong>Déclencheur</strong> Vous @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage de bouclier} une attaque de mêlée avec le bouclier apposé.</p>
-<p>Cette pierre verte gluante brille d'une forte lumière chaque fois que le bouclier qu'elle orne bloque une attaque de mêlée. Lorsque l'oeil est activé, l'attaquant doit réussir une sauvegarde de Force DC 25 ou devenir @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Slowed} 1 pendant 1 minute tandis que son corps se raidit lentement dans une pétrification partielle.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
+<p><strong>Déclencheur</strong> Vous effectuez un @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage au bouclier} à une attaque de mêlée avec le bouclier où l'oeil de basilic est fixé.</p>
+<p>Cette pierre verte gluante brille d'une forte lumière chaque fois que le bouclier qu'elle orne bloque une attaque de mêlée. Lorsque l'oeil est activé, l'attaquant doit réussir une sauvegarde de Force DD 25 ou devenir @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 pendant 1 minute alors que son corps se raidit lentement dans une pétrification partielle.</p>
