--- a/data/equipment/consumable-03-Oip645RjC5y57wFa.htm
+++ b/data/equipment/consumable-03-Oip645RjC5y57wFa.htm
@@ -1,7 +1,6 @@
 Name: Violet Venom
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Venin violet
+État: libre
 
 ------ Description (en) ------
 <p>The delicate process of extracting violet venom from a violet fungus leaves it diluted at the best of times. Alchemists are still on the hunt for a truly pure, unadulterated version of this highly toxic poison.</p>
@@ -14,12 +13,12 @@ Nom:
 <p><strong>Stage 2</strong> [[/r 1d6#poison]] poison plus @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained} (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 2d6#poison]] poison plus enfeebled 1 (1 round)</p>
 ------ Description (fr) ------
-Le processus délicat d'extraction du venin de violette à partir d'un champignon violet le laisse dilué dans le meilleur des cas. Les alchimistes sont toujours à la recherche d'une version vraiment pure et non altérée de ce poison très toxique ;
+Le processus délicat d'extraction du venin de violet à partir d'un champignon violet le laisse dilué dans le meilleur des cas. Les alchimistes sont toujours à la recherche d'une version vraiment pure et non altérée de ce poison très toxique.
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact (Contact)</p>
-<p><strong>Jet de sauvegarde</strong> DC 17 Force d'âme</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Contact)</p>
+<p><strong>Jet de sauvegarde</strong> DD 17 Vigueur</p>
 <p><strong>Début</strong> 1 minute</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 1d6#poison]] poison plus @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} 1 (1 round)</p>
+<p><strong>Stade 1</strong> [[/r 1d6#poison]] poison plus @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round)</p>
 <p><strong>Étape 2</strong> [[/r 1d6#poison]] poison plus @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} (1 round)</p>
 <p><strong>Étape 3</strong> [[/r 2d6#poison]] poison plus affaibli 1 (1 round)</p>
