--- a/data/equipment/consumable-03-omRmCbkQoK5YmCGv.htm
+++ b/data/equipment/consumable-03-omRmCbkQoK5YmCGv.htm
@@ -1,7 +1,6 @@
 Name: Potion of Acid Retaliation (Lesser)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Potion de Riposte acide (inférieure)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -9,5 +8,6 @@ Nom:
 <p>The aura deals 1d4 acid damage.</p>
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Pendant 1 minute après avoir bu une potion de représailles acides, vous rayonnez d'une faible aura d'énergie acide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort à portée de toucher contre vous) subit des dégâts d'acide.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Pendant 1 minute après avoir bu une potion de Riposte acide, vous rayonnez d'une faible aura d'énergie acide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts d'acide.</p>
 L'aura inflige 1d4 points de dégâts d'acide.</p>
