--- a/data/equipment/consumable-03-R0gsYr0jD1giTzpx.htm
+++ b/data/equipment/consumable-03-R0gsYr0jD1giTzpx.htm
@@ -1,7 +1,6 @@
 Name: Olfactory Obfuscator (Lesser)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Embrouilleur Olfactif (inférieur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -9,7 +8,7 @@ Nom:
 <p>This frothing fluid causes the drinker's body to exude trace odor absorbing oils. For 10 minutes after drinking this elixir, your scent is nearly unnoticeable.</p>
 <p>Creatures with imprecise scent don't detect you with that sense unless they @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Seek} for you, and you are concealed from creatures that perceive you with precise scent. You gain a +4 item bonus against attempts to Seek you by creatures using only scent-based senses; if they use any other senses as well, the bonus doesn't apply.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>>
 <hr />
-Ce liquide moussant permet au corps du buveur d’exprimer des traces d’huiles absorbant les odeurs. Pendant les 10 minutes qui suivent la consommation de cet élixir, votre odeur est presque imperceptible.</p>
-<p>Les créatures à l'odeur imprécise ne vous détectent pas avec ce sens à moins qu'elles ne vous @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Seek}, et vous êtes dissimulé aux créatures qui vous perçoivent avec une odeur précise. Vous gagnez un bonus d'objet de +4 contre les tentatives de vous chercher par des créatures utilisant uniquement des sens basés sur l'odorat ; si elles utilisent également d'autres sens, le bonus ne s'applique pas.</p>
+Ce liquide moussant permet au corps du buveur de suinter de l'huile absorbant les odeurs. Pendant les 10 minutes qui suivent la consommation de cet élixir, votre odeur est presque imperceptible.</p>
+<p>Les créatures à l'odeur imprécise ne vous détectent pas avec ce sens à moins qu'elles ne vous @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Cherche}, et vous êtes @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} aux créatures qui vous perçoivent avec une odeur précise. Vous gagnez un bonus d'objet de +4 contre les tentatives de vous chercher par des créatures utilisant uniquement des sens basés sur l'odorat ; si elles utilisent également d'autres sens, le bonus ne s'applique pas.</p>
