--- a/data/equipment/consumable-02-mDNDs5P8ZAJXYbDL.htm
+++ b/data/equipment/consumable-02-mDNDs5P8ZAJXYbDL.htm
@@ -15,7 +15,7 @@ Nom: Poison Larmes de Crapaud
 Les Larmes de crapaud peuvent être mélangées à tout autre aliment ou boisson, mais le poison peut également être ingéré tel quel. Le processus de raffinage du poison de crapaud géant atténue ses qualités mortelles et, par conséquent, les Larmes de crapaud sont rarement directement mortelles. Pourtant, ceux qui sont exposés aux Larmes de crapaud perdent souvent le contrôle de leurs actions, ce qui en fait un poison dangereux malgré tout.</p>
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Ingéré)</p>
-<p><strong>Jet de sauvegarde</strong> DD 19 Force</p>
+<p><strong>Jet de sauvegarde</strong> DD 19 Vigueur</p>
 <p><strong>Début</strong> 5 minutes</p>
 <p><strong>Durée maximale</strong> 30 minutes</p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (10 minutes)</p>
