--- a/data/equipment/consumable-02-cTBmQgWUyf50x3dY.htm
+++ b/data/equipment/consumable-02-cTBmQgWUyf50x3dY.htm
@@ -15,7 +15,7 @@ Nom: Poison de Tache noire
 De nombreux Calignis utilisent un poison débilitant fabriqué à partir de champignons souterrains.
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">T</span> Interagir (Blessure)</p>
-<p><strong>Jet de sauvegarde</strong> DD 16 Force</p>
+<p><strong>Jet de sauvegarde</strong> DD 16 Vigueur</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
 <p><strong>Stade 1</strong> [[/r 1d6 #poison]] poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} (1 round)</p>
 <p><strong>Stade 2</strong> Comme stade 1</p>
