--- a/data/equipment/consumable-16-C6v5p0ZtIUroYlU2.htm
+++ b/data/equipment/consumable-16-C6v5p0ZtIUroYlU2.htm
@@ -19,7 +19,7 @@ Nom: Agent répulsif de vermine (majeur)
 <p>Activation <span class="pf2-icon">3</span> Interagir</p>
 <hr />
 Cette crème spécialisée sert de répulsif pour éloigner les insectes. Le répulsif sert également à un certain nombre de venins d’insectes communs, en atténuant leur puissance et en renforçant le système immunitaire de la personne qui le porte pour qu’elle résiste aux venins.
-<p>Une fois appliqué sur votre peau, le répulsif vous accorde un bonus de +4 aux jets de sauvegarde de Force contre les poisons pendant 4 heures.</p>
+<p>Une fois appliqué sur votre peau, le répulsif vous accorde un bonus de +4 aux jets de sauvegarde de Vigueur contre les poisons pendant 4 heures.</p>
 <p>@Compendium[pf2e.consumable-effects.OAN5Fj21PJPhIqRU]{Effet: Agent répulsif de vermine (majeur)}</p>
 <hr />
 <p>De plus, tous les arthropodes (insectes, araignées, scorpions, crabes et autres animaux invertébrés similaires) doivent tenter une sauvegarde de Volonté (DD 35) lorsqu’ils essaient de vous attaquer avec une frappe de mêlée, ou avec une attaque en nuée comme les morsures de la nuée d’araignées. L'arthropode devient alors temporairement immunisé pendant 1 minute.</p>
