--- a/data/equipment/consumable-01-GS4YvQieBS11JNYR.htm
+++ b/data/equipment/consumable-01-GS4YvQieBS11JNYR.htm
@@ -1,7 +1,6 @@
 Name: Drakeheart Mutagen (Lesser)
-Nom: Mutagène de cœur de drake (Inférieur)
-État: changé
-État d'origine: libre
+Nom: Mutagène de Cœur de drake (inférieur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,7 +11,7 @@ Nom: Mutagène de cœur de drake (Inférieur)
 <p><strong>Duration</strong> 1 minute or until you use Final Surge, whichever comes first.</p>
 <p>@Compendium[pf2e.consumable-effects.GBBjw61g4ekJymT0]{Effect: Drakeheart Mutagen (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interaction</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
 <p>Votre peau se couvre d'écailles comme un drake, votre vision s'aiguise alors que vos pupilles sont fendues et vos membres deviennent secs et rapides, mais votre esprit et vos réflexes deviennent lents.</p>
 <p><strong>Avantage</strong> Vous obtenez un bonus d'objet de +4 à la CA, un maximum de Dextérité de +2 (comme d'habitude, vous utilisez votre plus faible maximum de Dextérité si vous en avez plus d'un) et un bonus d'objet de +1 aux tests de Perception. Si vous portez une armure, vous calculez toujours votre bonus de maîtrise à la CA en fonction de votre degré de maîtrise dans l'armure que vous portez, même si le mutagène de cœur de drake possède un bonus d'objet supérieur. Vous obtenez aussi l'action @Compendium[pf2e.actionspf2e.EHa0owz6mccnmSBf]{Impulsion finale}.</p>
