--- a/data/equipment/consumable-12-8e37h6HBr4ZyBSGt.htm
+++ b/data/equipment/consumable-12-8e37h6HBr4ZyBSGt.htm
@@ -1,7 +1,6 @@
 Name: Applereed Mutagen (Moderate)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène Pousse-Roseau (modéré)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -11,9 +10,9 @@ Nom:
 <p><strong>Duration</strong> 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.xVAdPzFaSvJXPMKv]{Effect: Applereed Mutagen (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
-<p>Ce liquide gommeux allonge vos jambes de manière disproportionnée, vous faisant grandir mais rendant vos mouvements maladroits. L'effet est très visible, à moins que vos vêtements ne puissent le dissimuler de manière adéquate ;
-<p><strong>Avantage</strong> Vous gagnez un bonus d'objet de +3 aux tests d'Athlétisme et vous gagnez un bonus de +15 pieds à votre Vitesse. De plus, vous grandissez d'une taille, mais votre plus grande taille n'a pas d'effets supplémentaires en dehors du changement potentiel d'espace.</p>
-<p><strong>Drawback</strong> Vous subissez une pénalité de -1 à la CA et une pénalité de -2 aux sauvegardes par réflexe. </p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p>Ce liquide gommeux allonge vos jambes de manière disproportionnée, vous faisant grandir mais rendant vos mouvements maladroits. L'effet est très visible, à moins que vos vêtements ne puissent le dissimuler de manière adéquate.
+<p><strong>Avantage</strong> Vous gagnez un bonus d'objet de +3 aux tests d'Athlétisme et vous gagnez un bonus de 4,5 mètres à votre Vitesse. De plus, vous grandissez d'une taille, mais votre plus grande taille n'a pas d'effets supplémentaires en dehors du changement potentiel d'espace.</p>
+<p><strong>Désavantage</strong> Vous subissez une pénalité de -1 à la CA et une pénalité de -2 aux jets de sauvegarde Réflexe. </p>
 <p><strong>Durée</strong> 10 minutes.</p>
-<p>@Compendium[pf2e.consumable-effects.xVAdPzFaSvJXPMKv]{Effet : Applereed Mutagen (Lesser)}</p>
+<p>@Compendium[pf2e.consumable-effects.xVAdPzFaSvJXPMKv]{Effet : Mutagène Pousse-Roseau (modéré))}</p>
