--- a/data/equipment/consumable-18-vTEWlRBUD4VzVwxK.htm
+++ b/data/equipment/consumable-18-vTEWlRBUD4VzVwxK.htm
@@ -15,4 +15,4 @@ Nom: Mutgène Pousse-Roseau (supérieur)
 <p><strong>Avantage</strong> Vous gagnez un bonus d'objet de +4 aux tests d'Athlétisme et vous gagnez un bonus de 6 mètres à votre Vitesse. De plus, vous grandissez d'une taille, mais votre plus grande taille n'a pas d'effets supplémentaires en dehors du changement potentiel d'espace.</p>
 <p><strong>Désavantage</strong> Vous subissez une pénalité de -1 à la CA et une pénalité de -2 aux jets de sauvegarde Réflexe. </p>
 <p><strong>Durée</strong> 1 heure.</p>
-<p>@Compendium[pf2e.consumable-effects.xVAdPzFaSvJXPMKv]{Effet : Mutagène Pousse-Roseau (supérieur))}</p>
+<p>@Compendium[pf2e.consumable-effects.xVAdPzFaSvJXPMKv]{Effet : Mutagène Pousse-Roseau (supérieur)}</p>
