--- a/data/equipment/consumable-04-SGS7fA2hcElw1EaL.htm
+++ b/data/equipment/consumable-04-SGS7fA2hcElw1EaL.htm
@@ -1,13 +1,13 @@
 Name: Deteriorating Dust
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Poudre Détériorante
+État: libre
 
 ------ Description (en) ------
 <p><span>Contained in a specially enchanted small leather or hide sack, <em>deteriorating dust</em> is a potent caustic agent and a prized item among Rovagug's more discreet followers.<br /></span></p>
 <p><span><strong>Activate</strong> <span class="pf2-icon">D</span> Interact; <strong>Effect</strong> You sprinkle the <em>deteriorating dust</em> over an unattended Medium or smaller object. The dust quickly fades to a transparent color and the object immediately begins to rust, melt, or otherwise fall apart. For the listed time, the object takes constant damage; if the object has a Hardness, then the dust gradually reduces the object's Hardness instead. If the <em>deteriorating dust</em> is still active after the object's Hardness is reduced to 0, it deals damage to the object as previously described. If the object survives, reduced Hardness returns after the dust's duration expires, but any damage remains.</span></p>
 <p><span>The affected object takes 1 damage per 3 hours (8 damage per day) and its Hardness is reduced by 1 per hour. The effect lasts for 3 days.</span></p>
 ------ Description (fr) ------
-<p><span>Contenue dans un petit sac en cuir ou en peau spécialement enchanté, <em>deteriorating dust</em> est un puissant agent caustique et un objet prisé des adeptes les plus discrets de Rovagug.<br /></span></p>
-<p><span><strong>Activer</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1. 8em ; display : inline;">D</span> Interact ; <strong>Effet</strong> Vous saupoudrez la <em>poussière détériorante</em> sur un objet moyen ou plus petit non surveillé. La poussière prend rapidement une couleur transparente et l'objet commence immédiatement à rouiller, à fondre ou à se désagréger. Pendant la durée indiquée, l’objet subit des dégâts constants ; si l’objet a une certaine dureté, la poussière réduit progressivement la dureté de l’objet. Si la <em>poussière de détérioration</em> est toujours active après que la dureté de l'objet'est réduite à 0, elle inflige des dégâts à l'objet comme décrit précédemment. Si l'objet survit, la réduction de la dureté revient après l'expiration de la durée de la poussière, mais les dégâts restent.</span></p>
-<p><span>L'objet affecté subit 1 dommage toutes les 3 heures (8 dommages par jour) et sa dureté est réduite de 1 par heure. L'effet dure pendant 3 jours.</span></p>
+<p>Contenue dans un petit sac en cuir ou en peau spécialement enchanté, cette poudre détériorante est un puissant agent caustique et un objet prisé par les adeptes les plus discrets de Rovagug.</p>
+<p><strong>Activate</strong> <span class="pf2-icon">D</span> Interagir</p>
+<p><strong>Effet</strong> Vous saupoudrez cette sorte poussière détériorante sur un objet moyen ou plus petit non surveillé. La poudre prend rapidement une couleur transparente et l'objet commence immédiatement à rouiller, à fondre ou à se désagréger. Pendant la durée indiquée, l’objet subit des dégâts constants ; si l’objet a une certaine dureté, la poussière réduit progressivement la dureté de l’objet. Si la poudre caustique est toujours active après que la dureté de l'objet'est réduite à 0, elle inflige des dégâts à l'objet comme décrit précédemment. Si l'objet survit, la réduction de la dureté réapparaît après l'expiration de la durée d'activation de la poudre, mais les dégâts sont conservés.</p>
+<p><span>L'objet affecté subit 1 point de dégât toutes les 3 heures (8 points de dégâts par jour) et sa dureté est réduite de 1 point par heure. L'effet dure pendant 3 jours.</span></p>
