--- a/data/equipment/consumable-09-GXH1PSioEkxTDceK.htm
+++ b/data/equipment/consumable-09-GXH1PSioEkxTDceK.htm
@@ -1,5 +1,5 @@
 Name: Caustic Deteriorating Dust
-Nom: Poudre Caustique
+Nom: Poudre de Détérioration caustique
 État: libre
 
 ------ Description (en) ------
@@ -9,6 +9,6 @@ Nom: Poudre Caustique
 <p>The affected object takes 1 damage per hour (24 damage per day) and its Hardness is reduced by 1 per hour. The effect lasts for 3 days.</p>
 ------ Description (fr) ------
 <p>Contenue dans un petit sac en cuir ou en peau spécialement enchanté, cette poudre détériorante est un puissant agent caustique et un objet prisé par les adeptes les plus discrets de Rovagug.</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">D</span> Interact</p>
-<p><strong>Effet</strong> Vous saupoudrez cette poussière déteriorante sur un objet moyen ou plus petit non surveillé. La poudre prend rapidement une couleur transparente et l'objet commence immédiatement à rouiller, à fondre ou à se désagréger. Pendant la durée indiquée, l’objet subit des dégâts constants ; si l’objet a une certaine dureté, la poussière réduit progressivement la dureté de l’objet. Si la poudre caustique est toujours active après que la dureté de l'objet'est réduite à 0, elle inflige des dégâts à l'objet comme décrit précédemment. Si l'objet survit, la réduction de la dureté réapparaît après l'expiration de la durée d'activation de la poudre, mais les dégâts sont conservés.</p>
+<p><strong>Activate</strong> <span class="pf2-icon">D</span> Interagir</p>
+<p><strong>Effet</strong> Vous saupoudrez cette sorte poussière détériorante sur un objet moyen ou plus petit non surveillé. La poudre prend rapidement une couleur transparente et l'objet commence immédiatement à rouiller, à fondre ou à se désagréger. Pendant la durée indiquée, l’objet subit des dégâts constants ; si l’objet a une certaine dureté, la poussière réduit progressivement la dureté de l’objet. Si la poudre caustique est toujours active après que la dureté de l'objet'est réduite à 0, elle inflige des dégâts à l'objet comme décrit précédemment. Si l'objet survit, la réduction de la dureté réapparaît après l'expiration de la durée d'activation de la poudre, mais les dégâts sont conservés.</p>
 <p>L'objet affecté subit 1 point de dégât par heure (24 points de dégâts par jour) et sa dureté est réduite de 1 point par heure. L'effet dure pendant 3 jours.</p>
