--- a/data/equipment/consumable-05-1CAPGpQczfq5exrs.htm
+++ b/data/equipment/consumable-05-1CAPGpQczfq5exrs.htm
@@ -1,7 +1,6 @@
 Name: Diluted Hype
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Excitation diluée
+État: libre
 
 ------ Description (en) ------
 <p>A synthetic adrenaline supplement that increases awareness and reaction time. Diluted hype has been mixed with saltwater to allow for cheaper mass production.</p>
@@ -15,9 +14,9 @@ Nom:
 ------ Description (fr) ------
 <p>Un supplément d'adrénaline synthétique qui augmente la conscience et le temps de réaction. L'hype diluée a été mélangée à de l'eau salée pour permettre une production de masse moins coûteuse.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact (Ingested)</p>
-<p><strong>Jet de sauvegarde</strong> DC 21 Force</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir (Ingéré)</p>
+<p><strong>Jet de sauvegarde</strong> DD 21 Vigueur</p>
 <p><strong>Durée maximale</strong> 1 minute</p>
-<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Quickened} et peut utiliser l'action supplémentaire pour faire un pas (1 round)</p>
+@Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} ou  @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} (1 round);</p>
 <p><strong>Étape 2</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 round)</p>
 <p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} et stupéfié 1 (1 round)</p>
