--- a/data/equipment/consumable-08-z3IG6t2o0zsfP2XQ.htm
+++ b/data/equipment/consumable-08-z3IG6t2o0zsfP2XQ.htm
@@ -11,10 +11,10 @@ Nom: Excitation
 <p><strong>Stage 2</strong> stupefied 2 (1 round);</p>
 <p><strong>Stage 3</strong> drained 2 and stupefied 2 (1 round)</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir (Ingéré)</p>
 <p>Un supplément d'adrénaline synthétique qui augmente la conscience et le temps de réaction.</p>
-<p><strong>Jet de sauvegarde</strong> DD 25 Fortitude;</p>
-<p><strong>Durée maximale</strong> 1 minute;</p>
+<p><strong>Jet de sauvegarde</strong> DD 25 Vigueur</p>
+<p><strong>Durée maximale</strong> 1 minute</p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} et peut utiliser l'action supplémentaire pour @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} ou  @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} (1 round);</p>
 <p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 2 (1 round);</p>
 <p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 2 et stupéfié 2 (1 round)</p>
