--- a/data/equipment/consumable-12-bRqczrlQDaeUvg6b.htm
+++ b/data/equipment/consumable-12-bRqczrlQDaeUvg6b.htm
@@ -1,7 +1,6 @@
 Name: Plasma Hype
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Adrénaline plasmatique
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -13,9 +12,9 @@ Nom:
 <p><strong>Stage 3</strong> drained 2 and stupefied 2 (1 round)</p>
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Un supplément d'adrénaline synthétique qui augmente la conscience et le temps de réaction. Le plasma hype a été infusé avec un mélange spécifique de fluides numériens et d'autres réactifs alchimiques afin d'améliorer la formule originale du hype.</p>
-<p><strong>Jet de sauvegarde</strong> DC 30 Fortitude;</p>
+<p>Un supplément d'adrénaline synthétique qui augmente la conscience et le temps de réaction. Cette molécule a été infusé avec un mélange spécifique de fluides numériens et d'autres réactifs alchimiques afin d'améliorer la formule originale de l'Adrénaline.</p>
+<p><strong>Jet de sauvegarde</strong> DC 30 Vigueur;</p>
 <p><strong>Durée maximale</strong> 1 minute;</p>
-<p><strong>Stade 1</strong> Bonus d'état de +10 pieds à la vitesse, accéléré et peut utiliser l'action supplémentaire pour faire un pas, marcher, grimper ou nager (1 round);</p>
-<p><strong>Stade 2</strong> accéléré et possibilité d'utiliser une action supplémentaire pour faire un pas ou une foulée (1 round);</p>
-<p><strong>Stade 3</strong> drainé 2 et stupéfié 2 (1 round)</p>
+<p><strong>Stade 1</strong> Bonus d'état de +4,5 mètres à la vitesse, @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} et peut utiliser l'action supplémentaire pour @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} ou  @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} (1 round);</p>
+<p><strong>Stade 2</strong> Accéléré et possibilité d'utiliser une action supplémentaire Faire un pas ou Marcher rapidement;</p>
+<p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 2 et @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 2 (1 round)</p>
