--- a/data/classes/EizrWvUPMS67Pahd.htm
+++ b/data/classes/EizrWvUPMS67Pahd.htm
@@ -1,7 +1,6 @@
 Name: Cleric
 Nom: Prêtre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><em>Deities work their will upon the world in infinite ways, and you serve as one of their most stalwart mortal servants. Blessed with divine magic, you live the ideals of your faith, adorn yourself with the symbols of your church, and train diligently to wield your deity's favored weapon. Your spells might protect and heal your allies, or they might punish foes and enemies of your faith, as your deity wills. Yours is a life of devotion, spreading the teachings of your faith through both word and deed.</em><br /><br /><strong>Key Ability: WISDOM</strong><br />At 1st level, your class gives you an ability boost to Wisdom.<br /><br /><strong>Hit Points: 8 plus your Constitution modifier</strong><br />You increase your maximum number of HP by this number at 1st level and every level thereafter.</p>
