--- a/data/equipment/consumable-07-903CuhvVUhE1lmoB.htm
+++ b/data/equipment/consumable-07-903CuhvVUhE1lmoB.htm
@@ -1,13 +1,12 @@
 Name: Corrosive Ammunition
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Munition corrosive
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <p>This peculiar ammunition is coated in yellow dust that leaves a stain on anything it touches. When activated corrosive ammunition hits a target, it dissolves across the target's armor. The armor takes 1d8 persistent acid damage that ignores the armor's Hardness; if the target isn't wearing armor, it takes the acid damage instead. This damage occurs at the end of the target's turns.</p>
 <p>The creature can end this effect by spending an Interact action to wipe off the corrosive dust, and otherwise the effect ends once the armor becomes broken.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Cette munition particulière est recouverte d'une poussière jaune qui laisse une tache sur tout ce qu'elle touche. Lorsque la munition corrosive activée touche une cible, elle se dissout à travers l’armure de la cible’. L'armure subit 1d8 dégâts acides persistants qui ignorent la dureté de l'armure ; si la cible ne porte pas d'armure, elle subit les dégâts acides à la place. Ces dégâts se produisent à la fin des tours de la cible.</p>
-<p>La créature peut mettre fin à cet effet en dépensant une action d'Interact pour essuyer la poussière corrosive, et sinon l'effet se termine une fois que l'armure est brisée.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Cette munition particulière est recouverte d'une poussière jaune qui laisse une tache sur tout ce qu'elle touche. Lorsque la munition corrosive activée touche une cible, elle se dissout à travers l’armure de la cible’. L'armure subit 1d8 dégâts acides persistants qui ignorent la dureté de l'armure. si la cible ne porte pas d'armure, elle subit les dégâts acides à la place. Ces dégâts se produisent à la fin des tours de la cible.</p>
+<p>La créature peut mettre fin à cet effet en dépensant une action @Compendium[pf2e.actionspf2e.pvQ5rY2zrtPI614F]{Interagir} pour essuyer la poussière corrosive, et sinon l'effet se termine une fois que l'armure est brisée.</p>
