--- a/data/equipment/consumable-03-3iRTGS2vYXz7SBrn.htm
+++ b/data/equipment/consumable-03-3iRTGS2vYXz7SBrn.htm
@@ -1,6 +1,6 @@
 Name: Blueblisters
-Nom: 
-État: auto-trad
+Nom: Boursouflure bleue
+État: libre
 
 ------ Description (en) ------
 <p>This flesh-eating disease causes prominent and painful blue blisters on the skin and gums. You can’t reduce your sickened condition while afflicted with blueblisters.</p>
@@ -12,11 +12,11 @@ Nom:
 <p><strong>Stage 3</strong> sickened 2 and drained 1 (1 week);</p>
 <p><strong>Stage 4</strong> sickened 2 and drained 2 (1 week)</p>
 ------ Description (fr) ------
-<p>Cette maladie mangeuse de chair provoque des cloques bleues proéminentes et douloureuses sur la peau et les gencives. Vous ne pouvez pas réduire votre état de malade tant que vous êtes atteint par les cloques bleues.</p>
+<p>Cette maladie mangeuse de chair provoque des boursouflures bleues proéminentes et douloureuses sur la peau et les gencives. Vous ne pouvez pas réduire votre état de malade tant que vous êtes atteint par les boursouflures bleues.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DC 17 Fortitude;</p>
+<p><strong>Jet de sauvegarde</strong> DD 17 Vigueur</p>
 <p><strong>Début</strong> 1 jour;</p>
-<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Sickened} 1 (1 jour);</p>
-<p><strong>Stade 2</strong> rendu malade 1 et @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1 (1 jour);</p>
-<p><strong>Stade 3</strong> rendu malade 2 et drainé 1 (1 semaine);</p>
-<p><strong>Stade 4</strong> rendu malade 2 et drainé 2 (1 semaine)</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 (1 jour);</p>
+<p><strong>Stade 2</strong> Malade 1 et @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1 (1 jour);</p>
+<p><strong>Stade 3</strong> Malade 2 et Drainé 1 (1 semaine);</p>
+<p><strong>Stade 4</strong> Malade 2 et drainé 2 (1 semaine)</p>
